# nodec_animation

./: CMakeLists.txt
.github/workflows/: build.yml
docs/: architecture.md  note.drawio  property_reflection.md
include/nodec_animation/: animated_component_writer.hpp  animation_component_support.hpp  animation_curve.hpp  component_registry.hpp  keyframe.hpp
include/nodec_animation/components/: animator.hpp
include/nodec_animation/components/impl/: animated_data.hpp  animator_activity.hpp
include/nodec_animation/resources/: animation_clip.hpp
include/nodec_animation/serialization/: animation_curve.hpp  keyframe.hpp
include/nodec_animation/serialization/components/: animator.hpp
include/nodec_animation/serialization/resources/: animation_clip.hpp
include/nodec_animation/systems/: animator_system.hpp
tests/: CMakeLists.txt  animated_component_writer.cpp  animation_clip.cpp  animation_curve.cpp
